# amcpy

./: .gitignore  16qam.pickle  README.md  calculate_features.py  config.yaml  convert_to_mat.py  convert_weights.py  dataset.py  dataset_analysis.py  features.py  functions.py  generate_dataset.grc  globals.py  gr_data.grc  gr_data.py  graphics.py  info.json  main.py  neural_network.py  nn_v2.py  preprocessing.py  project.csv  project_plots.m  pyproject.toml  quantization.py  read_binary_stream.py  requirements.txt  rna.py  rna_rebuilded.py  sendUART.py  serial_comm.py  sweep.yaml  teste.grc  timegif.py  wandb_script.py
arm-data/: embedded.m  neural_networks_acc_plot.m  plot_predictions.m  prediction.m
old/: read_binary_stream.py
src/amcpy/: __init__.py  config.py  feature_extraction.py  features.py  graphics.py  main.py  nn_model.py  nn_quantization.py  preprocessing.py
